--- a/change-requests/2f93a1.yaml
+++ b/change-requests/2f93a1.yaml
@@ -4,7 +4,75 @@ author:
   email: anton@strogonoff.name
   name: Anton
 timeCreated: 2020-07-02T04:13:01.730Z
-revisions: {}
+revisions:
+  concepts:
+    39-fra:
+      object:
+        id: 39
+        definition: >-
+          membre d’un ensemble d’éléments utilisé pour la représentation,
+          l’organisation ou le contrôle des données
+        language_code: fra
+        notes: []
+        examples: []
+        entry_status: valid
+        review_indicator: ''
+        authoritative_source:
+          ref: 'ISO/IEC 2382-1:1993'
+          link: 'https://www.iso.org/standard/7229.html'
+        lineage_source: 'ISO 19118:2011 ,4.2'
+        lineage_source_similarity: 1
+        date_accepted: 2002-08-15T16:00:00.000Z
+        review_date: 2007-01-22T16:00:00.000Z
+        review_status: final
+        review_decision: accepted
+        review_decision_date: 2011-10-14T16:00:00.000Z
+        review_decision_event: 'Publication of ISO 19118:2011'
+        review_decision_notes: 'Lineage source changed from  ISO 19118:2005 to ISO 19118:2011.'
+        release: '1'
+        terms:
+          - type: expression
+            designation: caractère
+            normative_status: admitted
+        _revisions:
+          current: 21bb5a
+          tree:
+            21bb5a:
+              object:
+                id: 39
+                definition: >-
+                  membre d’un ensemble d’éléments utilisé pour la
+                  représentation, l’organisation ou le contrôle des données
+                language_code: fra
+                notes: []
+                examples: []
+                entry_status: valid
+                review_indicator: ''
+                authoritative_source:
+                  ref: 'ISO/IEC 2382-1:1993'
+                  link: 'https://www.iso.org/standard/7229.html'
+                lineage_source: 'ISO 19118:2011 ,4.2'
+                lineage_source_similarity: 1
+                date_accepted: 2002-08-15T16:00:00.000Z
+                review_date: 2007-01-22T16:00:00.000Z
+                review_status: final
+                review_decision: accepted
+                review_decision_date: 2011-10-14T16:00:00.000Z
+                review_decision_event: 'Publication of ISO 19118:2011'
+                review_decision_notes: 'Lineage source changed from  ISO 19118:2005 to ISO 19118:2011.'
+                release: '1'
+                terms:
+                  - type: expression
+                    designation: caractère
+                    normative_status: preferred
+              parents: []
+              timeCreated: 2002-08-15T16:00:00.000Z
+              author:
+                name: Glossarist bot
+                email: glossarist@ribose.com
+      parents:
+        - 21bb5a
+      timeCreated: 2020-07-02T04:13:05.233Z
 meta:
   registry:
     stage: Draft
