--- a/change-requests/5375b0.yaml
+++ b/change-requests/5375b0.yaml
@@ -14,7 +14,8 @@ revisions:
         language_code: ara
         notes:
           - توصف مجموعات الاختبار التجريدي في فقرة للمطابقة
-        examples: []
+        examples:
+          - Test
         entry_status: valid
         review_indicator: ''
         authoritative_source:
@@ -63,7 +64,7 @@ revisions:
         usageInfo: ''
       parents:
         - eea12a
-      timeCreated: 2020-07-12T15:02:00.703Z
+      timeCreated: 2020-07-12T15:02:19.054Z
     6-eng:
       object:
         id: 6
