--- a/change-requests/07490a.yaml
+++ b/change-requests/07490a.yaml
@@ -4,7 +4,34 @@ author:
   name: Anton Strogonoff
   email: anton@strogonoff.name
 timeCreated: 2020-08-23T06:31:42.249Z
-revisions: {}
+revisions:
+  concepts:
+    4-eng:
+      object:
+        id: 4
+        definition: >-
+          method for testing implementation independent of any particular test
+          procedure
+        language_code: eng
+        notes: []
+        examples: []
+        entry_status: valid
+        review_indicator: ''
+        authoritative_source:
+          ref: 'ISO 19105:2000'
+          link: 'https://www.iso.org/standard/26010.html'
+        date_accepted: 2000-12-15T00:00:00.000Z
+        review_date: 2019-07-05T00:00:00.000Z
+        review_status: pending
+        review_type: retirement
+        release: '1'
+        terms:
+          - type: expression
+            designation: abstract test method
+            normative_status: deprecated
+      parents:
+        - 35da0c
+      timeCreated: 2020-08-23T06:31:43.448Z
 meta:
   registry:
     stage: Draft
@@ -24,7 +51,34 @@ _revisions:
           name: Anton Strogonoff
           email: anton@strogonoff.name
         timeCreated: 2020-08-23T06:31:42.249Z
-        revisions: {}
+        revisions:
+          concepts:
+            4-eng:
+              object:
+                id: 4
+                definition: >-
+                  method for testing implementation independent of any
+                  particular test procedure
+                language_code: eng
+                notes: []
+                examples: []
+                entry_status: valid
+                review_indicator: ''
+                authoritative_source:
+                  ref: 'ISO 19105:2000'
+                  link: 'https://www.iso.org/standard/26010.html'
+                date_accepted: 2000-12-15T00:00:00.000Z
+                review_date: 2019-07-05T00:00:00.000Z
+                review_status: pending
+                review_type: retirement
+                release: '1'
+                terms:
+                  - type: expression
+                    designation: abstract test method
+                    normative_status: deprecated
+              parents:
+                - 35da0c
+              timeCreated: 2020-08-23T06:31:43.448Z
         meta:
           registry:
             stage: Draft
