Move CR 1dfab8 to Proposal

--- a/change-requests/1dfab8.yaml
+++ b/change-requests/1dfab8.yaml
@@ -33,7 +33,7 @@ revisions:
       timeCreated: 2020-09-09T10:03:29.801Z
 meta:
   registry:
-    stage: Draft
+    stage: Proposal
   submitter:
     primaryPerson:
       name: Jack Testman
@@ -87,3 +87,4 @@ _revisions:
               affiliation: ''
       parents: []
       timeCreated: 2020-09-09T10:03:28.259Z
+timeSubmitted: 2020-09-09T10:07:13.540Z
