--- a/change-requests/1dfab8.yaml
+++ b/change-requests/1dfab8.yaml
@@ -34,7 +34,7 @@ revisions:
       createdObjectID: 14233
 meta:
   registry:
-    stage: Proposal
+    stage: Resolved
   submitter:
     primaryPerson:
       name: Jack Testman
@@ -89,3 +89,4 @@ _revisions:
       parents: []
       timeCreated: 2020-09-09T10:03:28.259Z
 timeSubmitted: 2020-09-09T10:07:13.540Z
+timeResolved: 2020-09-09T10:11:42.866Z
