--- a/change-requests/18415e.yaml
+++ b/change-requests/18415e.yaml
@@ -21,6 +21,77 @@ revisions:
         usageInfo: test
       parents: []
       timeCreated: 2020-09-18T17:12:05.703Z
+    232-rus:
+      object:
+        id: 232
+        definition: 'точка на изображении, которая однозначно представляет объектную точку'
+        language_code: rus
+        notes: []
+        examples: []
+        entry_status: valid
+        authoritative_source:
+          ref: 'ISO 19130-1:2018'
+          clause: '(E), 3.54'
+          link: 'https://www.iso.org/standard/66847.html'
+        lineage_source: 'ISO/TS 19130:2010(E)'
+        lineage_source_similarity: '1'
+        date_accepted: 2010-06-15T00:00:00.000Z
+        review_date: 2018-09-01T00:00:00.000Z
+        review_status: final
+        review_decision: accepted
+        review_decision_date: 2018-09-01T00:00:00.000Z
+        review_decision_event: 'Publication of ISO 19130-1:2018(E)'
+        review_decision_notes: >-
+          Authoritative reference changed from ISO/TS 19130:2010 to ISO
+          19130-1:2018(E), 3.54. Lineage source added as ISO/TS 19130:2010(E)
+        release: '2'
+        terms:
+          - type: expression
+            designation: Точка изображения
+            normative_status: preferred
+        _revisions:
+          current: 0a32c2
+          tree:
+            0a32c2:
+              object:
+                id: 232
+                definition: >-
+                  точка на изображении, которая однозначно представляет
+                  объектную точку
+                language_code: rus
+                notes: []
+                examples: []
+                entry_status: valid
+                authoritative_source:
+                  ref: 'ISO 19130-1:2018'
+                  clause: '(E), 3.54'
+                  link: 'https://www.iso.org/standard/66847.html'
+                lineage_source: 'ISO/TS 19130:2010(E)'
+                lineage_source_similarity: '1'
+                date_accepted: 2010-06-15T00:00:00.000Z
+                review_date: 2018-09-01T00:00:00.000Z
+                review_status: final
+                review_decision: accepted
+                review_decision_date: 2018-09-01T00:00:00.000Z
+                review_decision_event: 'Publication of ISO 19130-1:2018(E)'
+                review_decision_notes: >-
+                  Authoritative reference changed from ISO/TS 19130:2010 to ISO
+                  19130-1:2018(E), 3.54. Lineage source added as ISO/TS
+                  19130:2010(E)
+                release: '2'
+                terms:
+                  - type: expression
+                    designation: Точка изображения
+                    normative_status: preferred
+              parents: []
+              timeCreated: 2010-06-15T00:00:00.000Z
+              author:
+                name: Glossarist bot
+                email: glossarist@ribose.com
+        usageInfo: Test tochka
+      parents:
+        - 0a32c2
+      timeCreated: 2020-09-18T17:12:48.678Z
 meta:
   registry:
     stage: Draft
