Mark concepts/232-rus in CR 18415e as accepted, creating f67861

--- a/change-requests/18415e.yaml
+++ b/change-requests/18415e.yaml
@@ -92,6 +92,7 @@ revisions:
       parents:
         - 0a32c2
       timeCreated: 2020-09-18T17:12:48.678Z
+      createdRevisionID: f67861
 meta:
   registry:
     stage: Proposal
