--- a/change-requests/be8f97.yaml
+++ b/change-requests/be8f97.yaml
@@ -23,6 +23,56 @@ revisions:
         usageInfo: Test of synching 1 try
       parents: []
       timeCreated: 2020-09-19T10:32:18.392Z
+    32-pol:
+      object:
+        id: 32
+        definition: >-
+          zastosowany w kalendarzu ciąg okresów jednego typu,liczonych od
+          określonego zdarzenia
+        language_code: pol
+        notes: []
+        examples: []
+        authoritative_source:
+          ref: 'ISO 19108:2002'
+          link: 'https://www.iso.org/standard/26013.html'
+        lineage_source: PN-EN ISO 19108
+        date_accepted: 2002-09-01T00:00:00.000Z
+        release: '1'
+        terms:
+          - type: expression
+            designation: era kalendarzowa
+            normative_status: preferred
+        _revisions:
+          current: 42bab8
+          tree:
+            42bab8:
+              object:
+                id: 32
+                definition: >-
+                  zastosowany w kalendarzu ciąg okresów jednego typu,liczonych
+                  od określonego zdarzenia
+                language_code: pol
+                notes: []
+                examples: []
+                authoritative_source:
+                  ref: 'ISO 19108:2002'
+                  link: 'https://www.iso.org/standard/26013.html'
+                lineage_source: PN-EN ISO 19108
+                date_accepted: 2002-09-01T00:00:00.000Z
+                release: '1'
+                terms:
+                  - type: expression
+                    designation: era kalendarzowa
+                    normative_status: preferred
+              parents: []
+              timeCreated: 2002-09-01T00:00:00.000Z
+              author:
+                name: Glossarist bot
+                email: glossarist@ribose.com
+        usageInfo: Test of synching 1 try
+      parents:
+        - 42bab8
+      timeCreated: 2020-09-19T10:32:59.984Z
 meta:
   registry:
     stage: Draft
