--- a/change-requests/37e846.yaml
+++ b/change-requests/37e846.yaml
@@ -22,6 +22,73 @@ revisions:
         usageInfo: Test of synching 2 try
       parents: []
       timeCreated: 2020-09-19T10:37:34.612Z
+    11-zho:
+      object:
+        id: 11
+        definition: <UML>关联的特殊形式，用以说明聚集(整体)与组成部分之间的整体-部分关系。
+        language_code: zho
+        notes:
+          - 参见组合。
+        examples: []
+        entry_status: valid
+        authoritative_source:
+          ref: UML 1
+        lineage_source: 'ISO/TS 19103:2005'
+        lineage_source_similarity: 1
+        date_accepted: 2005-07-15T00:00:00.000Z
+        review_date: 2009-01-14T00:00:00.000Z
+        review_status: final
+        review_decision: accepted
+        review_decision_date: 2015-12-01T00:00:00.000Z
+        review_decision_event: 'Publication of ISO 19103:2015'
+        review_decision_notes: >-
+          Authoritative reference changed from ISO/IEC 19501:2005 (Adapted from)
+          to UML 1. Lineage source added as ISO/TS 19103:2005
+        release: '1'
+        terms:
+          - type: expression
+            designation: 聚合<UML>
+            normative_status: preferred
+        _revisions:
+          current: '221697'
+          tree:
+            '221697':
+              object:
+                id: 11
+                definition: <UML>关联的特殊形式，用以说明聚集(整体)与组成部分之间的整体-部分关系。
+                language_code: zho
+                notes:
+                  - 参见组合。
+                examples: []
+                entry_status: valid
+                authoritative_source:
+                  ref: UML 1
+                lineage_source: 'ISO/TS 19103:2005'
+                lineage_source_similarity: 1
+                date_accepted: 2005-07-14T16:00:00.000Z
+                review_date: 2009-01-13T16:00:00.000Z
+                review_status: final
+                review_decision: accepted
+                review_decision_date: 2015-11-30T16:00:00.000Z
+                review_decision_event: 'Publication of ISO 19103:2015'
+                review_decision_notes: >-
+                  Authoritative reference changed from ISO/IEC 19501:2005
+                  (Adapted from) to UML 1. Lineage source added as ISO/TS
+                  19103:2005
+                release: '1'
+                terms:
+                  - type: expression
+                    designation: 聚合<UML>
+                    normative_status: preferred
+              parents: []
+              timeCreated: 2005-07-14T16:00:00.000Z
+              author:
+                name: Glossarist bot
+                email: glossarist@ribose.com
+        usageInfo: Test of synching 2 try
+      parents:
+        - '221697'
+      timeCreated: 2020-09-19T10:38:08.444Z
 meta:
   registry:
     stage: Draft
