--- a/change-requests/0989ea.yaml
+++ b/change-requests/0989ea.yaml
@@ -23,6 +23,80 @@ revisions:
         usageInfo: Test of sycnhing 3 try
       parents: []
       timeCreated: 2020-09-19T10:46:41.124Z
+    10-spa:
+      object:
+        id: 10
+        definition: >-
+          término clasificado de acuerdo a la escala de aceptanción como un
+          sinónimo de un término preferente
+        language_code: spa
+        notes: []
+        examples: []
+        entry_status: valid
+        authoritative_source:
+          ref: 'ISO 1087-1:2000'
+          clause: '3.4.16, modified — the Note 1 to entry has been added.'
+          link: 'https://www.iso.org/standard/20057.html'
+        lineage_source: 'ISO/TS 19104:2008'
+        lineage_source_similarity: 1
+        date_accepted: 2008-11-15T00:00:00.000Z
+        review_date: 2013-01-29T00:00:00.000Z
+        review_status: final
+        review_decision: accepted
+        review_decision_date: 2016-10-01T00:00:00.000Z
+        review_decision_event: 'Publication of ISO 19104:2016'
+        review_decision_notes: >-
+          Authoritative reference changed from ISO 1087-1:2000 to ISO
+          1087-1:2000, 3.4.16, modified — the Note 1 to entry has been added..
+          Lineage source added as ISO/TS 19104:2008
+        release: '2'
+        terms:
+          - type: expression
+            designation: término admitido
+            normative_status: preferred
+        _revisions:
+          current: d29b1b
+          tree:
+            d29b1b:
+              object:
+                id: 10
+                definition: >-
+                  término clasificado de acuerdo a la escala de aceptanción como
+                  un sinónimo de un término preferente
+                language_code: spa
+                notes: []
+                examples: []
+                entry_status: valid
+                authoritative_source:
+                  ref: 'ISO 1087-1:2000'
+                  clause: '3.4.16, modified — the Note 1 to entry has been added.'
+                  link: 'https://www.iso.org/standard/20057.html'
+                lineage_source: 'ISO/TS 19104:2008'
+                lineage_source_similarity: 1
+                date_accepted: 2008-11-15T00:00:00.000Z
+                review_date: 2013-01-29T00:00:00.000Z
+                review_status: final
+                review_decision: accepted
+                review_decision_date: 2016-10-01T00:00:00.000Z
+                review_decision_event: 'Publication of ISO 19104:2016'
+                review_decision_notes: >-
+                  Authoritative reference changed from ISO 1087-1:2000 to ISO
+                  1087-1:2000, 3.4.16, modified — the Note 1 to entry has been
+                  added.. Lineage source added as ISO/TS 19104:2008
+                release: '2'
+                terms:
+                  - type: expression
+                    designation: término admitido
+                    normative_status: preferred
+              parents: []
+              timeCreated: 2008-11-15T00:00:00.000Z
+              author:
+                name: Glossarist bot
+                email: glossarist@ribose.com
+        usageInfo: Test of synching 3 try
+      parents:
+        - d29b1b
+      timeCreated: 2020-09-19T10:47:03.696Z
 meta:
   registry:
     stage: Draft
