Move CR 0989ea to Proposal

--- a/change-requests/0989ea.yaml
+++ b/change-requests/0989ea.yaml
@@ -99,7 +99,7 @@ revisions:
       timeCreated: 2020-09-19T10:47:03.696Z
 meta:
   registry:
-    stage: Draft
+    stage: Proposal
   submitter:
     primaryPerson:
       name: Batyr
@@ -145,3 +145,4 @@ _revisions:
               affiliation: ''
       parents: []
       timeCreated: 2020-09-19T10:46:39.564Z
+timeSubmitted: 2020-09-19T10:47:16.667Z
