--- a/change-requests/4d3689.yaml
+++ b/change-requests/4d3689.yaml
@@ -4,7 +4,23 @@ author:
   name: Batyr
   email: kuroiakujin@gmail.com
 timeCreated: 2020-09-19T10:54:43.041Z
-revisions: {}
+revisions:
+  concepts:
+    '-1-eng':
+      object:
+        id: -1
+        language_code: eng
+        entry_status: valid
+        terms:
+          - designation: Test for 1.6.40
+            type: expression
+        definition: Just put the cable out
+        notes: []
+        examples: []
+        authoritative_source: {}
+        usageInfo: Test of synching 5 try (the one without an internet)
+      parents: []
+      timeCreated: 2020-09-19T10:54:44.622Z
 meta:
   registry:
     stage: Draft
@@ -24,7 +40,23 @@ _revisions:
           name: Batyr
           email: kuroiakujin@gmail.com
         timeCreated: 2020-09-19T10:54:43.041Z
-        revisions: {}
+        revisions:
+          concepts:
+            '-1-eng':
+              object:
+                id: -1
+                language_code: eng
+                entry_status: valid
+                terms:
+                  - designation: Test for 1.6.40
+                    type: expression
+                definition: Just put the cable out
+                notes: []
+                examples: []
+                authoritative_source: {}
+                usageInfo: Test of synching 5 try (the one without an internet)
+              parents: []
+              timeCreated: 2020-09-19T10:54:44.622Z
         meta:
           registry:
             stage: Draft
