--- a/change-requests/4d3689.yaml
+++ b/change-requests/4d3689.yaml
@@ -90,7 +90,7 @@ revisions:
       timeCreated: 2020-09-19T10:55:05.340Z
 meta:
   registry:
-    stage: Draft
+    stage: Proposal
   submitter:
     primaryPerson:
       name: Batyr
@@ -134,3 +134,4 @@ _revisions:
               affiliation: ''
       parents: []
       timeCreated: 2020-09-19T10:54:43.041Z
+timeSubmitted: 2020-09-19T10:55:10.713Z
